# todo-backend-fastapi

./: Prueba Técnica.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  tokens_users
.github/workflows/: docker-compose-test.yml  python-app.yml  test-backend-postgres.yml  test-postgres.yml
alembic/: env.py
alembic/versions/: 45a50554175e_create_tokens.py  d4484f14847e_create_users_table.py
backend/: Dockerfile  __init__.py  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/api/: app.py
backend/api/core/: db.py  models.py
backend/api/scripts/: alembic_runner.py
backend/api/tests/: test_auth.py  test_db.py  test_tasks.py
backend/api/utils/: security.py
backend/api/views/: auth.py  tasks.py
docs/: Backend.md  Migraciones.md  Problematicas.md  Tests.md  Workflows.md
